mundando tabelas e funcionamento do sistema